spelling corrected secrets

--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Install surge
         run: npm install -g surge
       - name: Deploy html page using surge
-        run: surge ./ harisbootcamp.surge.sh --token ${{secret.MYSECRET}}
+        run: surge ./ harisbootcamp.surge.sh --token ${{secrets.MYSECRET}}
