--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -21,11 +21,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install NodeJS
+      - name: sudo Install NodeJS
         uses: actions/setup-node@v2.1.2
 
       # Runs a set of commands using the runners shell
-      - name: Install surge
+      - name: sudo Install surge
         run: npm install -g surge
       - name: Deploy html page using surge
         run: surge ./ harisbootcamp.surge.sh --token ${{secrets.MYSECRET}}
